tests/functional/lang/eval-fail-elemAt-2.err.exp
error:
       … while calling the 'elemAt' builtin
         at /pwd/lang/eval-fail-elemAt-2.nix:1:1:
            1| builtins.elemAt [ ] (-1)
             | ^
            2|

       error: 'builtins.elemAt' called with index -1 on a list of size 0
